--- a/kubernetes/stockmanager-service.yaml
+++ b/kubernetes/stockmanager-service.yaml
@@ -39,4 +39,7 @@ spec:
             path: /health
             port: 8030
           initialDelaySeconds: 30
-          timeoutSeconds: 1
+          timeoutSeconds: 5
+           periodSeconds: 10
+          successThreshold: 1
+          failureThreshold: 3
